# STM32F411_FreeRTOS_Boilerplate

./: .gitignore  CMakeLists.txt  build.sh
Project/app/: main.cpp  startup_stm32f411xe.s
